# ChangeLog for sys-libs/glibc
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.882 2012/08/18 03:37:07 vapier Exp $

  18 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.16.0.ebuild:
  Update alpha/s390 patches.

  14 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.16.0.ebuild,
  glibc-9999.ebuild:
  Raise min gcc/binutil versions to match upstream configure checks.  Also split
  version logic between host and target.

  14 Aug 2012; Mike Frysinger <vapier@gentoo.org> files/eblits/src_unpack.eblit:
  Fix inverted version logic with libgcc_eh #431304 by David Flogeras.

  13 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.10.1-r1.ebuild,
  glibc-2.11.3.ebuild, glibc-2.12.1-r3.ebuild, glibc-2.12.2.ebuild,
  glibc-2.13-r2.ebuild, glibc-2.13-r4.ebuild, glibc-2.14.1-r2.ebuild,
  glibc-2.14.1-r3.ebuild, glibc-2.14.ebuild, glibc-2.15-r1.ebuild,
  glibc-2.15-r2.ebuild, glibc-2.16.0.ebuild, glibc-2.9_p20081201-r3.ebuild,
  glibc-9999.ebuild:
  Tweak CATEGORY processing to make it easier to understand.

  13 Aug 2012; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Document what USE=gd does.

  12 Aug 2012; Mike Frysinger <vapier@gentoo.org> files/eblits/src_unpack.eblit:
  Do not use the -lgcc_eh hack with glibc-2.17+ since its been addressed
  upstream.

  12 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.16.0.ebuild:
  Add alpha/arm keywords since it builds for both.

  12 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.15-r2.ebuild,
  glibc-2.16.0.ebuild:
  Drop ppc atomic patch to fix runtime crashes #413685 by hiyuh.

  11 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.15-r2.ebuild:
  Add some mips love #430346.

  11 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.16.0.ebuild,
  glibc-9999.ebuild:
  Fix default hppa nptl kernel version #430904 by Hans.

  11 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.15-r2.ebuild:
  Add some alpha love #430346.
