@@ -1,5 +1,13 @@
 # ChangeLog for sys-libs/glibc
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.882 2012/08/18 03:37:07 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.883 2012/08/18 18:40:21 vapier Exp $
+
+  18 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.10.1-r1.ebuild,
+  glibc-2.11.3.ebuild, glibc-2.12.1-r3.ebuild, glibc-2.12.2.ebuild,
+  glibc-2.13-r2.ebuild, glibc-2.13-r4.ebuild, glibc-2.14.1-r2.ebuild,
+  glibc-2.14.1-r3.ebuild, glibc-2.14.ebuild, glibc-2.15-r1.ebuild,
+  glibc-2.15-r2.ebuild, glibc-2.16.0.ebuild, glibc-2.9_p20081201-r3.ebuild,
+  glibc-9999.ebuild:
+  Clean out more obsolete code.
 
   18 Aug 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.16.0.ebuild:
   Update alpha/s390 patches.
